avoid unnecessary boxing/object creation in type conversions
Converting boolean true to bytesRef:

    Before:     0.19
    After:      0.00

Convert strings to boolean:

    Before:     0.29 [+- 0.01]
    After:      0.11 [+- 0.01]

Convert bytesRefs to boolean (with the string optimization
already applied):

    Before:     0.09 [+- 0.01]
    After:      0.04 [+- 0.00]